crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__execute_workflow_fn_with_delays@testing_sleep-workflow__workflow.join-next-try-found.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "ExecutionLogSanitized::from(execution_log.clone())"
---
{
  "execution_id": "E_00000000000000000000000000",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "created": {
          "ffqn": "testing:sleep-workflow/workflow.join-next-try-found",
          "params": [],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "deployment_id": "Dep_00000000000000000000000000",
          "metadata": {},
          "scheduled_by": null
        }
      },
      "version": 0
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000001",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 1
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "g:1"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "g:1",
            "request": {
              "type": "delay_request",
              "delay_id": "Delay_00000000000000000000000000.g:1_0",
              "expires_at": "1970-01-01T00:00:00.001Z",
              "schedule_at": {
                "in": {
                  "secs": 0,
                  "nanos": 1000000
                }
              }
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "o:1-sleep"
          }
        }
      },
      "version": 4
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "o:1-sleep",
            "request": {
              "type": "delay_request",
              "delay_id": "Delay_00000000000000000000000000.o:1-sleep_1",
              "expires_at": "1970-01-01T00:00:00.010Z",
              "schedule_at": {
                "in": {
                  "secs": 0,
                  "nanos": 10000000
                }
              }
            }
          }
        }
      },
      "version": 5
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "o:1-sleep",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": false
          }
        }
      },
      "version": 6
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000002",
          "lock_expires_at": "1970-01-01T00:00:01.010Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 7
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next_try",
            "join_set_id": "g:1",
            "outcome": "found"
          }
        }
      },
      "version": 8
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next_try",
            "join_set_id": "g:1",
            "outcome": "all_processed"
          }
        }
      },
      "version": 9
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "finished": {
          "retval": {
            "ok": null
          },
          "http_client_traces": null
        }
      },
      "version": 10
    }
  ],
  "responses": [
    {
      "created_at": "1970-01-01T00:00:00.001Z",
      "event": {
        "join_set_id": "g:1",
        "event": {
          "type": "delay_finished",
          "delay_id": "Delay_00000000000000000000000000.g:1_0",
          "result": {
            "Ok": null
          }
        }
      }
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "join_set_id": "o:1-sleep",
        "event": {
          "type": "delay_finished",
          "delay_id": "Delay_00000000000000000000000000.o:1-sleep_1",
          "result": {
            "Ok": null
          }
        }
      }
    }
  ],
  "next_version": 10,
  "pending_state": {
    "status": "finished",
    "version": 10,
    "finished_at": "1970-01-01T00:00:00.010Z",
    "result_kind": "ok"
  },
  "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
}
