crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__execute_workflow_fn_with_delays@testing_sleep-workflow__workflow.sleep-activity-submit.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "ExecutionLogSanitized::from(execution_log.clone())"
---
{
  "execution_id": "E_00000000000000000000000000",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "created": {
          "ffqn": "testing:sleep-workflow/workflow.sleep-activity-submit",
          "params": [],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "deployment_id": "Dep_00000000000000000000000000",
          "metadata": {},
          "scheduled_by": null
        }
      },
      "version": 0
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000001",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 1
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "g:1"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "g:1",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000000.g:1_1",
              "target_ffqn": "testing:sleep/sleep.sleep",
              "params": [
                {
                  "days": 1
                }
              ],
              "result": {
                "Ok": null
              }
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "g:1",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 4
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000002",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 5
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "finished": {
          "retval": {
            "ok": null
          },
          "http_client_traces": null
        }
      },
      "version": 6
    }
  ],
  "responses": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "g:1",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_00000000000000000000000000.g:1_1",
          "finished_version": 1,
          "result": {
            "execution_error": {
              "kind": "cancelled"
            }
          }
        }
      }
    }
  ],
  "next_version": 6,
  "pending_state": {
    "status": "finished",
    "version": 6,
    "finished_at": "1970-01-01T00:00:00Z",
    "result_kind": "ok"
  },
  "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
}
